basic gl widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(KumaQtTest VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(KumaQtTest main.cpp)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_PREFIX_PATH "/home/teddy/Qt-build/")
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets OpenGLWidgets)
+
+qt_standard_project_setup()
+
+add_subdirectory(src)
